# ME5413_Final_Project_Group11

./: .gitignore  README.md  gmapping_map.yaml  recognized_digits_summary.txt  test.urdf
maps/: merged_manual_v1.ply
src/A-LOAM/: CMakeLists.txt
src/A-LOAM/src/: laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
src/group11_stack/: ARCHITECTURE.md  CMakeLists.txt  README.md  package.xml
src/group11_stack/config/: floor2_task.yaml
src/group11_stack/launch/: floor2_task.launch
src/group11_stack/scripts/: floor2_task_node.py
src/interactive_tools/: rviz_plugin.xml
src/me5413_slam_comparison/: CMakeLists.txt  README.md  package.xml
src/me5413_slam_comparison/bags/: cartographer_trajectory.tum  ground_truth_trajectory.tum
src/me5413_slam_comparison/launch/: cartographer.launch  gmapping.launch  rtabmap.launch
src/me5413_slam_comparison/rviz/: cartographer.rviz
src/me5413_slam_comparison/scripts/: evo_compare.sh  evo_compare_aloam.sh  extract_trajectory.sh  extract_trajectory_aloam.sh  extract_tum_from_bag.py  record_trajectory.sh  record_trajectory_aloam.sh
src/me5413_world/: CMakeLists.txt  FASTLIO_2D_MAPPING.md  FAST_LIO_SETUP.md  package.xml
src/me5413_world/config/: base_local_planner_params_slope_safe.yaml  base_local_planner_params_tracking.yaml  costmap_common_params_global_scan.yaml  costmap_common_params_local_scan.yaml  costmap_common_params_slope_safe.yaml  fast_lio_velodyne.yaml  move_base_params_slope_safe.yaml  robot_localization_3d_lidar.yaml
src/me5413_world/docs/: successful_mapping_20260331_202049.md
(+76 files in other folders)
