<?xml version="1.0"?>
<package format="2">
  <name>group11_stack</name>
  <version>0.0.1</version>
  <description>Task-level coordination package for Group 11 floor-2 mission logic.</description>

  <maintainer email="yushi@example.com">yushi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <exec_depend>me5413_world</exec_depend>

  <export/>
</package>
